Corrected Container for resume page so links at bottom are aligned properly

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 
 .common-app {
     color: #515C6F;
-    background-color: #F3F2F2;
     font-family: 'Playfair Display', serif;
 }
 
@@ -18,6 +17,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    border-bottom: 1px solid gray;
 }
 
 .navbar a {
@@ -28,11 +28,8 @@
 
 /***********Front PAGE************/
 .front-page {
-    color: #515C6F;
     font-size: calc(16px + 1vw);
-    background-color: #F3F2F2;
     width: inherit;
-    height: 100%;
     padding-bottom: 100px;
 }
 
@@ -68,11 +65,9 @@
 .portfolio-title {
     text-align: center;
     padding-top: 5%;
-    background-color: #F3F2F2;
 }
 
 .portfolio-item {
-    background-color: #F3F2F2;
     width: 100%;
     height: 100%;
 }
@@ -83,7 +78,6 @@
     margin-top: 2.5%;
     width: inherit;
     position: relative;
-    background-color: #F3F2F2;
 }
 
 .portfolio-image {
@@ -133,10 +127,8 @@
     padding-right: 15%;
     padding-top: 62px;
     font-size: calc(14px + 0.4vw);
-    background-size: cover;
-    background-position: inherit;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .resume-title {
@@ -146,12 +138,11 @@
 }
 
 .resume-text {
-    padding-bottom: 15%;
+    padding-bottom: 100px
 }
 
 .resume-footer {
-    position: absolute;
-    bottom: 10%;
+    margin-left: 0 !important;
 }
 
 .resume-footer a {
@@ -163,8 +154,10 @@
 .about-page {
     width: 100%;
     text-align: center;
-    padding-top: 62px;
+    padding-top: 100px;
     padding-bottom: 100px;
+    background-size: cover;
+    background-position: inherit;
 }
 
 .about-picture {
@@ -192,7 +185,6 @@
 
 .contact-page {
     width: 100%;
-    height: 100vh;
     padding-top: 100px;
     padding-left: 15%;
     padding-right: 15%;
@@ -284,7 +276,6 @@
 .portfolio-page {
     padding-top: 68px;
     width: 100%;
-    height: 100%;
     padding-left: 10%;
     padding-right: 10%;
     padding-bottom: 100px;
@@ -316,4 +307,5 @@
 .image-shading {
     box-shadow: 1px 1px 3px #c2c1c1;
     min-width: 200px;
+    margin-top: 8px;
 }
